# askama_axum_example

./: Cargo.toml
src/: main.rs
templates/: hello.html
