[package]
name = "askama_axum_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = "0.6.20"
env_logger = "0.10.0"
log = "0.4.20"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
